--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <div class="board-inner">
                         <ul class="nav nav-tabs" id="myTab">
                             <div class="liner"></div>
+
                             <li class="active">
                                 <a href="#home" data-toggle="tab" title="Home">
                                     <span class="round-tabs one">
@@ -54,6 +55,14 @@
                                 <a href="#projects" data-toggle="tab" title="Projects">
                                     <span class="round-tabs four">
                                         <i class="glyphicon glyphicon-folder-open"></i>
+                                    </span> 
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="https://neji0924.github.io/windows"  title="Restart">
+                                    <span class="round-tabs five">
+                                        <i class="glyphicon glyphicon-off"></i>
                                     </span> 
                                 </a>
                             </li>
