--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.min.css">
 
 </head>
-<body>
-    <section style="background:#efefe9;">
+<body style="background:#efefe9;">
+    <section>
         <div class="container">
             <div class="row">
                 <div class="board">
