use Laravel-Elixir

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Neji's Resume">
     <meta property="og:description" content="Hi, 我是世鵬">
-    <meta property="og:image" content="http://neji0924.github.io/assets/images/me.jpg">
+    <meta property="og:image" content="http://neji0924.github.io/public/images/me.jpg">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.min.css">
+    <link rel="stylesheet" type="text/css" href="./public/css/app.css">
 
 </head>
 <body style="background:#efefe9;">
@@ -83,7 +83,7 @@
                         <div class="tab-pane fade" id="profile">
                             <h3 class="head text-center">About Me</h3>
                             <div class="col-sm-3 text-center">
-                                <img class="user-img" src="./assets/images/me.jpg">
+                                <img class="user-img" src="./public/images/me.jpg">
                             </div>
                             <div class="col-sm-9 text-left">
 <pre>
@@ -182,7 +182,7 @@
                                                     <li class="col-sm-3">
                                                         <div class="fff">
                                                             <div class="thumbnail">
-                                                                <a href="http://www.evernote.com/l/Ae1zv-dOh_hHmoH00m06HHLPW0GTWKt5zP4/" target="_blank"><img src="./assets/images/pj1.jpg"></a>
+                                                                <a href="http://www.evernote.com/l/Ae1zv-dOh_hHmoH00m06HHLPW0GTWKt5zP4/" target="_blank"><img src="./public/images/pj1.jpg"></a>
                                                             </div>
                                                             <div class="caption">
                                                                 <h4>FB直播投票</h4>
@@ -192,7 +192,7 @@
                                                     <li class="col-sm-3">
                                                         <div class="fff">
                                                             <div class="thumbnail">
-                                                                <a href="http://www.evernote.com/l/Ae0acqTD0WhLz60dCMO6ig9qNKpv_ztAQug/" target="_blank"><img src="./assets/images/pj2.jpg"></a>
+                                                                <a href="http://www.evernote.com/l/Ae0acqTD0WhLz60dCMO6ig9qNKpv_ztAQug/" target="_blank"><img src="./public/images/pj2.jpg"></a>
                                                             </div>
                                                             <div class="caption">
                                                                 <h4>API製作</h4>
@@ -202,7 +202,7 @@
                                                     <li class="col-sm-3">
                                                         <div class="fff">
                                                               <div class="thumbnail">
-                                                                <a href="http://www.evernote.com/l/Ae2ON_L-FltJcpx9DDlj9tJkbIGWOLwthGs/" target="_blank"><img src="./assets/images/pj3.jpg"></a>
+                                                                <a href="http://www.evernote.com/l/Ae2ON_L-FltJcpx9DDlj9tJkbIGWOLwthGs/" target="_blank"><img src="./public/images/pj3.jpg"></a>
                                                             </div>
                                                             <div class="caption">
                                                                 <h4>科大實習系統</h4>
@@ -212,7 +212,7 @@
                                                     <li class="col-sm-3">
                                                         <div class="fff">
                                                             <div class="thumbnail">
-                                                                <a href="http://www.evernote.com/l/Ae1pSKv272ZGFJ0W0x_d8FxOI-IMDbvEGaM/" target="_blank"><img src="./assets/images/pj4.jpg"></a>
+                                                                <a href="http://www.evernote.com/l/Ae1pSKv272ZGFJ0W0x_d8FxOI-IMDbvEGaM/" target="_blank"><img src="./public/images/pj4.jpg"></a>
                                                             </div>
                                                             <div class="caption">
                                                                 <h4>神明繞境</h4>
@@ -226,7 +226,7 @@
                                                     <li class="col-sm-3">
                                                         <div class="fff">
                                                             <div class="thumbnail">
-                                                                <a href="http://www.evernote.com/l/Ae2pE_wcEXpK0KtVUXPIiV5i5OHJyLyLLxI/" target="_blank"><img src="./assets/images/pj5.jpg"></a>
+                                                                <a href="http://www.evernote.com/l/Ae2pE_wcEXpK0KtVUXPIiV5i5OHJyLyLLxI/" target="_blank"><img src="./public/images/pj5.jpg"></a>
                                                             </div>
                                                             <div class="caption">
                                                                 <h4>前台說明功能</h4>
