project更換呈現方式

--- a/index.html
+++ b/index.html
@@ -52,15 +52,7 @@
                             </li>
 
                             <li>
-                                <a href="#projects" data-toggle="tab" title="Projects">
-                                    <span class="round-tabs four">
-                                        <i class="glyphicon glyphicon-folder-open"></i>
-                                    </span> 
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="https://neji0924.github.io/windows"  title="Restart">
+                                <a href="https://neji0924.github.io/windows"  title="Projects">
                                     <span class="round-tabs five">
                                         <i class="glyphicon glyphicon-off"></i>
                                     </span> 
@@ -169,82 +161,6 @@
                             </p>
                         </div>
 
-                        <div class="tab-pane fade" id="projects">
-
-                        
-
-
-                            <div class="col-xs-12">
-                                <div class="carousel slide" id="myCarousel">
-                                    <div class="carousel-inner">
-                                        <div class="item active">
-                                                <ul class="thumbnails">
-                                                    <li class="col-sm-3">
-                                                        <div class="fff">
-                                                            <div class="thumbnail">
-                                                                <a href="http://www.evernote.com/l/Ae1zv-dOh_hHmoH00m06HHLPW0GTWKt5zP4/" target="_blank"><img src="./public/images/pj1.jpg"></a>
-                                                            </div>
-                                                            <div class="caption">
-                                                                <h4>FB直播投票</h4>
-                                                            </div>
-                                                        </div>
-                                                    </li>
-                                                    <li class="col-sm-3">
-                                                        <div class="fff">
-                                                            <div class="thumbnail">
-                                                                <a href="http://www.evernote.com/l/Ae0acqTD0WhLz60dCMO6ig9qNKpv_ztAQug/" target="_blank"><img src="./public/images/pj2.jpg"></a>
-                                                            </div>
-                                                            <div class="caption">
-                                                                <h4>API製作</h4>
-                                                            </div>
-                                                        </div>
-                                                    </li>
-                                                    <li class="col-sm-3">
-                                                        <div class="fff">
-                                                              <div class="thumbnail">
-                                                                <a href="http://www.evernote.com/l/Ae2ON_L-FltJcpx9DDlj9tJkbIGWOLwthGs/" target="_blank"><img src="./public/images/pj3.jpg"></a>
-                                                            </div>
-                                                            <div class="caption">
-                                                                <h4>科大實習系統</h4>
-                                                            </div>
-                                                        </div>
-                                                    </li>
-                                                    <li class="col-sm-3">
-                                                        <div class="fff">
-                                                            <div class="thumbnail">
-                                                                <a href="http://www.evernote.com/l/Ae1pSKv272ZGFJ0W0x_d8FxOI-IMDbvEGaM/" target="_blank"><img src="./public/images/pj4.jpg"></a>
-                                                            </div>
-                                                            <div class="caption">
-                                                                <h4>神明繞境</h4>
-                                                            </div>
-                                                        </div>
-                                                    </li>
-                                                </ul>
-                                          </div>
-                                        <div class="item">
-                                                <ul class="thumbnails">
-                                                    <li class="col-sm-3">
-                                                        <div class="fff">
-                                                            <div class="thumbnail">
-                                                                <a href="http://www.evernote.com/l/Ae2pE_wcEXpK0KtVUXPIiV5i5OHJyLyLLxI/" target="_blank"><img src="./public/images/pj5.jpg"></a>
-                                                            </div>
-                                                            <div class="caption">
-                                                                <h4>前台說明功能</h4>
-                                                            </div>
-                                                        </div>
-                                                    </li>
-                                                </ul>
-                                          </div>
-                                    </div>
-                                   <nav>
-                                        <ul class="control-box pager">
-                                            <li><a data-slide="prev" href="#myCarousel" class=""><i class="glyphicon glyphicon-chevron-left"></i></a></li>
-                                            <li><a data-slide="next" href="#myCarousel" class=""><i class="glyphicon glyphicon-chevron-right"></i></li>
-                                        </ul>
-                                    </nav>                
-                                </div> 
-                            </div> 
-                        </div>
                         <div class="clearfix"></div>
                     </div>
                 </div>
