--- a/windows/index.html
+++ b/windows/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="refresh" content="3 ; url=https://neji0924.github.io/">
+	<meta http-equiv="refresh" content="3 ; url=https://neji0924.github.io/windows/desktop.html">
 
 	<title>開機中</title>
 	<link rel="stylesheet" type="text/css" href="../public/css/windows.css">
