--- a/windows/desktop.html
+++ b/windows/desktop.html
@@ -20,24 +20,55 @@
 					</a>
 				</li>
 				<li>
-					<a class="doc" href="#" data-target="doc">
-						<span>我的文件</span>
+					<a class="doc" href="#" data-target="proj-1">
+						<span>FB直播投票</span>
 					</a>
 				</li>
+				<li>
+					<a class="doc" href="#" data-target="proj-2">
+						<span>工研院API製作</span>
+					</a>
+				</li>
+				<li>
+					<a class="doc" href="#" data-target="proj-3">
+						<span>高苑科大實習系統</span>
+					</a>
+				</li>
+				<li>
+					<a class="doc" href="#" data-target="proj-4">
+						<span>神明遶境</span>
+					</a>
+				</li>
+				<li>
+					<a class="doc" href="#" data-target="proj-5">
+						<span>elife前端說明功能</span>
+					</a>
+				</li>
+				<li>
+					<a class="doc" href="#" data-target="proj-6">
+						<span>台積電系統維護</span>
+					</a>
+				</li>
+				<li>
+					<div class="chrome" href="#" data-target="https://604.com.tw">
+						<span>604貿易公司</span>
+					</div>
+				</li>
+
 			</ul>
 		</div>
 	</div>
 
-	<div class="box activity" id="computer">
+	<div class="box" id="computer">
 		<div class="tool">
 			<img src="../public/images/computer.png">
 			<span>我的電腦</span>
 			<ul>
 				<li>
-					<a>&nbsp;ˍ&nbsp;&nbsp;</a>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
 				</li>
 				<li>
-					<a><i class="fa fa-window-maximize" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
 				</li>
 				<li>
 					<a class="close" href="#">Ｘ</a>
@@ -52,17 +83,699 @@
 			<span>我的文件</span>
 			<ul>
 				<li>
-					<a>&nbsp;ˍ&nbsp;&nbsp;</a>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
 				</li>
 				<li>
-					<a><i class="fa fa-window-maximize" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
 				</li>
 				<li>
 					<a class="close" href="#">Ｘ</a>
 				</li>
 			</ul>
 		</div>
+		<div class="edit">
+			<ul>
+				<li>
+					<a href="#">檔案(<u>F</u>)</a>
+				</li>
+				<li>
+					<a href="#">編輯(<u>E</u>)</a>
+				</li>
+				<li>
+					<a href="#">檢視(<u>V</u>)</a>
+				</li>
+				<li>
+					<a href="#">我的最愛(<u>A</u>)</a>
+				</li>
+				<li>
+					<a href="#">工具(<u>T</u>)</a>
+				</li>
+				<li>
+					<a href="#">說明(<u>H</u>)</a>
+				</li>
+			</ul>
+			<div>		
+				<img src="../public/images/windows_logo.png">
+			</div>
+		</div>
+		<div class="page-tool">
+			<img src="../public/images/tool.png">
+		</div>
+		<div class="url">
+			<a href="#">網址(<u>D</u>)</a>		
+			<input type="text" value="C:\">
+		</div>
 	</div>
+
+	<!-- pj1 -->
+	<div class="box" id="proj-1">
+		<div class="tool">
+			<img src="../public/images/doc.png">
+			<span>FB直播投票</span>
+			<ul>
+				<li>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a class="close" href="#">Ｘ</a>
+				</li>
+			</ul>
+		</div>
+		<div class="edit">
+			<ul>
+				<li>
+					<a href="#">檔案(<u>F</u>)</a>
+				</li>
+				<li>
+					<a href="#">編輯(<u>E</u>)</a>
+				</li>
+				<li>
+					<a href="#">檢視(<u>V</u>)</a>
+				</li>
+				<li>
+					<a href="#">我的最愛(<u>A</u>)</a>
+				</li>
+				<li>
+					<a href="#">工具(<u>T</u>)</a>
+				</li>
+				<li>
+					<a href="#">說明(<u>H</u>)</a>
+				</li>
+			</ul>
+			<div>		
+				<img src="../public/images/windows_logo.png">
+			</div>
+		</div>
+		<div class="page-tool">
+			<img src="../public/images/tool.png">
+		</div>
+		<div class="url">
+			<a href="#">網址(<u>D</u>)</a>		
+			<input type="text" value="C:\">
+		</div>
+		<div class="content">
+			<ul>
+				<li>
+					<a class="image" href="#" data-target="p1-1">
+						<span>001</span>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+
+	<div class="box" id="p1-1">
+		<div class="tool">
+			<img src="../public/images/img.png">
+			<span>001</span>
+			<ul>
+				<li>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a class="close" href="#">Ｘ</a>
+				</li>
+			</ul>
+		</div>
+		<img class="img" src="../public/images/pj1.jpg">
+	</div>
+
+	<!-- pj2 -->
+	<div class="box" id="proj-2">
+		<div class="tool">
+			<img src="../public/images/doc.png">
+			<span>工研院API製作</span>
+			<ul>
+				<li>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a class="close" href="#">Ｘ</a>
+				</li>
+			</ul>
+		</div>
+		<div class="edit">
+			<ul>
+				<li>
+					<a href="#">檔案(<u>F</u>)</a>
+				</li>
+				<li>
+					<a href="#">編輯(<u>E</u>)</a>
+				</li>
+				<li>
+					<a href="#">檢視(<u>V</u>)</a>
+				</li>
+				<li>
+					<a href="#">我的最愛(<u>A</u>)</a>
+				</li>
+				<li>
+					<a href="#">工具(<u>T</u>)</a>
+				</li>
+				<li>
+					<a href="#">說明(<u>H</u>)</a>
+				</li>
+			</ul>
+			<div>		
+				<img src="../public/images/windows_logo.png">
+			</div>
+		</div>
+		<div class="page-tool">
+			<img src="../public/images/tool.png">
+		</div>
+		<div class="url">
+			<a href="#">網址(<u>D</u>)</a>		
+			<input type="text" value="C:\">
+		</div>
+		<div class="content">
+			<ul>
+				<li>
+					<a class="image" href="#" data-target="p2-1">
+						<span>001</span>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+
+	<div class="box" id="p2-1">
+		<div class="tool">
+			<img src="../public/images/img.png">
+			<span>001</span>
+			<ul>
+				<li>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a class="close" href="#">Ｘ</a>
+				</li>
+			</ul>
+		</div>
+		<img class="img" src="../public/images/pj2.jpg">
+	</div>
+
+	<!-- pj3 -->
+	<div class="box" id="proj-3">
+		<div class="tool">
+			<img src="../public/images/doc.png">
+			<span>高苑科大實習系統</span>
+			<ul>
+				<li>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a class="close" href="#">Ｘ</a>
+				</li>
+			</ul>
+		</div>
+		<div class="edit">
+			<ul>
+				<li>
+					<a href="#">檔案(<u>F</u>)</a>
+				</li>
+				<li>
+					<a href="#">編輯(<u>E</u>)</a>
+				</li>
+				<li>
+					<a href="#">檢視(<u>V</u>)</a>
+				</li>
+				<li>
+					<a href="#">我的最愛(<u>A</u>)</a>
+				</li>
+				<li>
+					<a href="#">工具(<u>T</u>)</a>
+				</li>
+				<li>
+					<a href="#">說明(<u>H</u>)</a>
+				</li>
+			</ul>
+			<div>		
+				<img src="../public/images/windows_logo.png">
+			</div>
+		</div>
+		<div class="page-tool">
+			<img src="../public/images/tool.png">
+		</div>
+		<div class="url">
+			<a href="#">網址(<u>D</u>)</a>		
+			<input type="text" value="C:\">
+		</div>
+		<div class="content">
+			<ul>
+				<li>
+					<a class="image" href="#" data-target="p3-1">
+						<span>001</span>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+
+	<div class="box" id="p3-1">
+		<div class="tool">
+			<img src="../public/images/img.png">
+			<span>001</span>
+			<ul>
+				<li>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a class="close" href="#">Ｘ</a>
+				</li>
+			</ul>
+		</div>
+		<img class="img" src="../public/images/pj3.jpg">
+	</div>
+
+	<!-- pj4 -->
+	<div class="box" id="proj-4">
+		<div class="tool">
+			<img src="../public/images/doc.png">
+			<span>神明遶境</span>
+			<ul>
+				<li>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a class="close" href="#">Ｘ</a>
+				</li>
+			</ul>
+		</div>
+		<div class="edit">
+			<ul>
+				<li>
+					<a href="#">檔案(<u>F</u>)</a>
+				</li>
+				<li>
+					<a href="#">編輯(<u>E</u>)</a>
+				</li>
+				<li>
+					<a href="#">檢視(<u>V</u>)</a>
+				</li>
+				<li>
+					<a href="#">我的最愛(<u>A</u>)</a>
+				</li>
+				<li>
+					<a href="#">工具(<u>T</u>)</a>
+				</li>
+				<li>
+					<a href="#">說明(<u>H</u>)</a>
+				</li>
+			</ul>
+			<div>		
+				<img src="../public/images/windows_logo.png">
+			</div>
+		</div>
+		<div class="page-tool">
+			<img src="../public/images/tool.png">
+		</div>
+		<div class="url">
+			<a href="#">網址(<u>D</u>)</a>		
+			<input type="text" value="C:\">
+		</div>
+		<div class="content">
+			<ul>
+				<li>
+					<a class="image" href="#" data-target="p4-1">
+						<span>001</span>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+
+	<div class="box" id="p4-1">
+		<div class="tool">
+			<img src="../public/images/img.png">
+			<span>001</span>
+			<ul>
+				<li>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a class="close" href="#">Ｘ</a>
+				</li>
+			</ul>
+		</div>
+		<img class="img" src="../public/images/pj4.jpg">
+	</div>
+
+	<!-- pj5 -->
+	<div class="box" id="proj-5">
+		<div class="tool">
+			<img src="../public/images/doc.png">
+			<span>elife前端說明功能</span>
+			<ul>
+				<li>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a class="close" href="#">Ｘ</a>
+				</li>
+			</ul>
+		</div>
+		<div class="edit">
+			<ul>
+				<li>
+					<a href="#">檔案(<u>F</u>)</a>
+				</li>
+				<li>
+					<a href="#">編輯(<u>E</u>)</a>
+				</li>
+				<li>
+					<a href="#">檢視(<u>V</u>)</a>
+				</li>
+				<li>
+					<a href="#">我的最愛(<u>A</u>)</a>
+				</li>
+				<li>
+					<a href="#">工具(<u>T</u>)</a>
+				</li>
+				<li>
+					<a href="#">說明(<u>H</u>)</a>
+				</li>
+			</ul>
+			<div>		
+				<img src="../public/images/windows_logo.png">
+			</div>
+		</div>
+		<div class="page-tool">
+			<img src="../public/images/tool.png">
+		</div>
+		<div class="url">
+			<a href="#">網址(<u>D</u>)</a>		
+			<input type="text" value="C:\">
+		</div>
+		<div class="content">
+			<ul>
+				<li>
+					<a class="image" href="#" data-target="p5-1">
+						<span>001-1</span>
+					</a>
+				</li>
+				<li>
+					<a class="image" href="#" data-target="p5-2">
+						<span>001-2</span>
+					</a>
+				</li>
+				<li>
+					<a class="image" href="#" data-target="p5-3">
+						<span>002-1</span>
+					</a>
+				</li>
+				<li>
+					<a class="image" href="#" data-target="p5-4">
+						<span>002-2</span>
+					</a>
+				</li>
+				<li>
+					<a class="image" href="#" data-target="p5-5">
+						<span>003-1</span>
+					</a>
+				</li>
+				<li>
+					<a class="image" href="#" data-target="p5-6">
+						<span>003-2</span>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+
+	<div class="box" id="p5-1">
+		<div class="tool">
+			<img src="../public/images/img.png">
+			<span>001-1</span>
+			<ul>
+				<li>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a class="close" href="#">Ｘ</a>
+				</li>
+			</ul>
+		</div>
+		<img class="img" src="../public/images/pj5.jpg">
+	</div>
+	<div class="box" id="p5-2">
+		<div class="tool">
+			<img src="../public/images/img.png">
+			<span>001-2</span>
+			<ul>
+				<li>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a class="close" href="#">Ｘ</a>
+				</li>
+			</ul>
+		</div>
+		<img class="img" src="../public/images/pj5-1.jpg">
+	</div>
+	<div class="box" id="p5-3">
+		<div class="tool">
+			<img src="../public/images/img.png">
+			<span>002-1</span>
+			<ul>
+				<li>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a class="close" href="#">Ｘ</a>
+				</li>
+			</ul>
+		</div>
+		<img class="img" src="../public/images/pj5-2.png">
+	</div>
+	<div class="box" id="p5-4">
+		<div class="tool">
+			<img src="../public/images/img.png">
+			<span>002-2</span>
+			<ul>
+				<li>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a class="close" href="#">Ｘ</a>
+				</li>
+			</ul>
+		</div>
+		<img class="img" src="../public/images/pj5-3.png">
+	</div>
+	<div class="box" id="p5-5">
+		<div class="tool">
+			<img src="../public/images/img.png">
+			<span>003-1</span>
+			<ul>
+				<li>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a class="close" href="#">Ｘ</a>
+				</li>
+			</ul>
+		</div>
+		<img class="img" src="../public/images/pj5-4.png">
+	</div>
+	<div class="box" id="p5-6">
+		<div class="tool">
+			<img src="../public/images/img.png">
+			<span>003-2</span>
+			<ul>
+				<li>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a class="close" href="#">Ｘ</a>
+				</li>
+			</ul>
+		</div>
+		<img class="img" src="../public/images/pj5-5.png">
+	</div>
+
+	<!-- pj6 -->
+	<div class="box" id="proj-6">
+		<div class="tool">
+			<img src="../public/images/doc.png">
+			<span>台積電系統維護</span>
+			<ul>
+				<li>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a class="close" href="#">Ｘ</a>
+				</li>
+			</ul>
+		</div>
+		<div class="edit">
+			<ul>
+				<li>
+					<a href="#">檔案(<u>F</u>)</a>
+				</li>
+				<li>
+					<a href="#">編輯(<u>E</u>)</a>
+				</li>
+				<li>
+					<a href="#">檢視(<u>V</u>)</a>
+				</li>
+				<li>
+					<a href="#">我的最愛(<u>A</u>)</a>
+				</li>
+				<li>
+					<a href="#">工具(<u>T</u>)</a>
+				</li>
+				<li>
+					<a href="#">說明(<u>H</u>)</a>
+				</li>
+			</ul>
+			<div>		
+				<img src="../public/images/windows_logo.png">
+			</div>
+		</div>
+		<div class="page-tool">
+			<img src="../public/images/tool.png">
+		</div>
+		<div class="url">
+			<a href="#">網址(<u>D</u>)</a>		
+			<input type="text" value="C:\">
+		</div>
+		<div class="content">
+			<ul>
+				<li>
+					<a class="image" href="#" data-target="p6-1">
+						<span>001</span>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+
+	<div class="box" id="p6-1">
+		<div class="tool">
+			<img src="../public/images/img.png">
+			<span>001</span>
+			<ul>
+				<li>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a class="close" href="#">Ｘ</a>
+				</li>
+			</ul>
+		</div>
+		<img class="img" src="../public/images/pj6.jpg">
+	</div>
+
+	<!-- pj7 -->
+	<div class="box" id="proj-7">
+		<div class="tool">
+			<img src="../public/images/doc.png">
+			<span>604貿易公司</span>
+			<ul>
+				<li>
+					<a href="#">&nbsp;ˍ&nbsp;&nbsp;</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-window-maximize full-btn" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a class="close" href="#">Ｘ</a>
+				</li>
+			</ul>
+		</div>
+		<div class="edit">
+			<ul>
+				<li>
+					<a href="#">檔案(<u>F</u>)</a>
+				</li>
+				<li>
+					<a href="#">編輯(<u>E</u>)</a>
+				</li>
+				<li>
+					<a href="#">檢視(<u>V</u>)</a>
+				</li>
+				<li>
+					<a href="#">我的最愛(<u>A</u>)</a>
+				</li>
+				<li>
+					<a href="#">工具(<u>T</u>)</a>
+				</li>
+				<li>
+					<a href="#">說明(<u>H</u>)</a>
+				</li>
+			</ul>
+			<div>		
+				<img src="../public/images/windows_logo.png">
+			</div>
+		</div>
+		<div class="page-tool">
+			<img src="../public/images/tool.png">
+		</div>
+		<div class="url">
+			<a href="#">網址(<u>D</u>)</a>		
+			<input type="text" value="C:\">
+		</div>
+		<div class="content">
+			<ul>
+				<li>
+					<div class="chrome" data-target="https://604.com.tw">
+						<span>604官網</span>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</div>
+
 	<script src="../public/js/app.js"></script>
 </body>
 </html>
