桌面改為div呈現

--- a/windows/desktop.html
+++ b/windows/desktop.html
@@ -13,49 +13,38 @@
 		</nav>
 
 		<div class="desktop">
-			<ul>
-				<li>
-					<a class="computer" href="#" data-target="computer">
-						<span>我的電腦</span>
-					</a>
-				</li>
-				<li>
-					<a class="doc" href="#" data-target="proj-1">
-						<span>FB直播投票</span>
-					</a>
-				</li>
-				<li>
-					<a class="doc" href="#" data-target="proj-2">
-						<span>工研院API製作</span>
-					</a>
-				</li>
-				<li>
-					<a class="doc" href="#" data-target="proj-3">
-						<span>高苑科大實習系統</span>
-					</a>
-				</li>
-				<li>
-					<a class="doc" href="#" data-target="proj-4">
-						<span>神明遶境</span>
-					</a>
-				</li>
-				<li>
-					<a class="doc" href="#" data-target="proj-5">
-						<span>elife前端說明功能</span>
-					</a>
-				</li>
-				<li>
-					<a class="doc" href="#" data-target="proj-6">
-						<span>台積電系統維護</span>
-					</a>
-				</li>
-				<li>
-					<div class="chrome" href="#" data-target="https://604.com.tw">
-						<span>604貿易公司</span>
-					</div>
-				</li>
 
-			</ul>
+			<div class="computer" data-target="computer">
+				<span>我的電腦</span>
+			</div>
+
+			<div class="doc" data-target="proj-1">
+				<span>FB直播投票</span>
+			</div>
+
+			<div class="doc" data-target="proj-2">
+				<span>工研院API製作</span>
+			</div>
+
+			<div class="doc" data-target="proj-3">
+				<span>高苑科大實習系統</span>
+			</div>
+
+			<div class="doc" data-target="proj-4">
+				<span>神明遶境</span>
+			</div>
+
+			<div class="doc" data-target="proj-5">
+				<span>elife前端說明功能</span>
+			</div>
+
+			<div class="doc" data-target="proj-6">
+				<span>台積電系統維護</span>
+			</div>
+
+			<div class="chrome" data-target="https://604.com.tw">
+				<span>604貿易公司</span>
+			</div>
 		</div>
 	</div>
 
