npm教學增加尋找套件網址

--- a/teaching/npm.html
+++ b/teaching/npm.html
@@ -153,6 +153,10 @@ $ npm list     //專案套件
 						<p>-dev就不多說了</p>
 						<p>--save沒加不會將資訊存在package.json裡面</p>
 					</section>
+					<section>
+						<h2>尋找套件</h2>
+						<a href="https://www.npmjs.com/" target="_blank">here</a>
+					</section>
 				</section>
 
 				<section>
