--- a/teaching/npm.html
+++ b/teaching/npm.html
@@ -34,6 +34,7 @@
 					<section>
 						<h2>MAC</h2>
                         <pre><code class="nohighlight" data-trim>$ brew install node</code></pre>
+                        <p>或是安裝nvm再由nvm安裝node</p>
 					</section>
 					<section>
 						<h2>測試一下是否可以執行</h2>
@@ -43,6 +44,7 @@
 				<section>
 					<section>
 						<h1>指令教學</h1>
+						<p>先看過就好不用操作</p>
 					</section>
 					<section>
 						<h2>全域安裝</h2>
@@ -77,11 +79,12 @@ $ npm list     //專案套件
 					</section>
 					<section>
 						<h2>建立</h2>
+						<p>cd至專案跟目錄</p>
 						<pre><code class="nohighlight" data-trim>$ npm init</code></pre>
 						<p>Enter大法後就會產出package.json</p>
 					</section>
 					<section>
-						<h2>內容物</h2>
+						<h2>package.json開啟後(用sublime開啟即可)</h2>
 						<pre><code class="nohighlight">
 {
   "name": "test",
@@ -105,7 +108,7 @@ $ npm list     //專案套件
 						<p>其他都不重要</p>
 					</section>
 					<section>
-						<h2>先複製貼上這個範例</h2>
+						<h2>先複製這個範例到package.json</h2>
 						<pre><code class="nohighlight" data-trim>
 {
   "private": true,
