--- a/teaching/index.html
+++ b/teaching/index.html
@@ -10,6 +10,7 @@
 	<h1>前端套件教學</h1>
 	<ul>
 		<li><a href="./npm.html">day1-npm教學</a></li>
+		<li><a href="./gulp.html">day2-gulp教學</a></li>
 	</ul>
 </body>
 </html>
