--- a/practice/dialog-banner/index.html
+++ b/practice/dialog-banner/index.html
@@ -39,6 +39,27 @@
 	  		</div>
 		</div>
 	</div>
+
+	<div class="container text-center" id="my-banner">
+		<div class="banner">	
+			<div>
+				<img src="../images/b1.jpg" alt="banner">
+			</div>
+			<div>
+				<img src="../images/b2.jpg" alt="banner">
+			</div>
+			<div>
+				<img src="../images/b3.jpg" alt="banner">
+			</div>
+		</div>
+
+		<a class="prev">
+			<span class="glyphicon glyphicon-chevron-left"></span>
+	    </a>
+	    <a class="next">
+	    	<span class="glyphicon glyphicon-chevron-right"></span>
+	    </a>
+	</div>
 	<script src="../js/app.js"></script>
 </body>
 </html>
