--- a/teaching/index.html
+++ b/teaching/index.html
@@ -12,5 +12,8 @@
 		<li><a href="./npm.html">day1-npm教學</a></li>
 		<li><a href="./gulp.html">day2-gulp教學</a></li>
 	</ul>
+	<ul>
+		<li><a href="./scss.html">scss教學</a></li>
+	</ul>
 </body>
 </html>
