--- a/index.html
+++ b/index.html
@@ -83,10 +83,11 @@
         "name": "陳世鵬",
         "age": 26,
         "e-mail": "neji0924@gmail.com",
-        "phone number": "0905386481",
+        "phone number": "0911960764",
         "education": "國立高雄應用科技大學-資訊管理系",
         "experience": [
-            "竹貓星球數位股份有限公司(2016/11 ~ NOW)"
+            "竹貓星球數位股份有限公司(2016/11 ~ 2017/6)",
+            "日康科技有限公司(2017/7 ~ Now)"
         ]
     }
 </pre> 
