--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                             <li class="list-group-item"> Bootstrap</li>
                                             <li class="list-group-item"> RWD</li>
                                             <li class="list-group-item"> HTML5</li>
-                                            <li class="list-group-item"> CSS</li>
+                                            <li class="list-group-item"> CSS/SCSS</li>
                                         </ul>
                                        
                                     </div>
