--- a/teaching/index.html
+++ b/teaching/index.html
@@ -9,11 +9,12 @@
 <body>
 	<h1>前端套件教學</h1>
 	<ul>
-		<li><a href="./npm.html">day1-npm教學</a></li>
-		<li><a href="./gulp.html">day2-gulp教學</a></li>
+		<li><a href="./npm.html">day1-npm</a></li>
+		<li><a href="./gulp.html">day2-gulp</a></li>
 	</ul>
 	<ul>
-		<li><a href="./scss.html">scss教學</a></li>
+		<li><a href="./scss.html">scss</a></li>
+		<li><a href="./yarn.html">yarn</a></li>
 	</ul>
 </body>
 </html>
