--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
                                 <div class="col-sm-3 text-center">
                                     <div class="panel panel-success panel-pricing">
                                         <div class="panel-heading">
-                                            <h3>版本控制</h3>
+                                            <h3>工具</h3>
                                         </div>
                                         
                                         <ul class="list-group text-center">
                                             <li class="list-group-item"> Git</li>
-                                            <li class="list-group-item"> GitHub</li>
-                                            <li class="list-group-item"> BitBucket</li>
+                                            <li class="list-group-item"> Gulp</li>
+                                            <li class="list-group-item"> NPM</li>
                                         </ul>
                                     </div>
                                 </div>
