--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
     <link rel="stylesheet" type="text/css" href="./public/css/app.css">
 </head>
 <body class="animated fadeIn">
+    <div id="loading">
+        <h1 id="loader">
+            <span>L</span>
+            <span>O</span>
+            <span>A</span>
+            <span>D</span>
+            <span>I</span>
+            <span>N</span>
+            <span>G</span>
+        </h1>
+    </div>
     <ul id="menu">
         <li data-menuanchor="first"><a href="#first">home</a></li>
         <li data-menuanchor="second"><a href="#second">profile</a></li>
