--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
 
         $(function(){
             fullpageClass.init();
+            $("#loading").hide();
         });
     </script>
 </body>
