--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script src="./public/js/loadCSS.js"></script>
+    <script async src="./public/js/loadCSS.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109448670-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
